More consistency fixes for JI coercion: * Move more places to calling toJava * Move code away from calling convertRubyToJava, the old clunky coercion path
Two behavior changes are introduced by this commit:
* When coming out of a collection (RubyArray, RubyHash) Fixnum will now coerce to the smallest java.lang.Number subtype its value can fit into. We already did this for calling methods that receive Object, but now also do it for many other cases of conversion to Object.
* nil values can now be assigned to or passed for primitive fields or arguments; nil will coerce as "0" in the smallest Number type possible.